# gnisdata-py

./: .flake8  CHANGELOG.md  LICENSE  README.md  gnisdata.py  pyproject.toml
.github/workflows/: auto-tag.yml  build_and_publish_pypi.yml  pr-checks.yml
tests/: __init__.py  test_gnisdata.py
