[tool.poetry]
name = "gnisdata"
version = "0.2.1"
description = "A Python 3 utility to pull, view, and filter USGS GNIS data"
authors = ["Chad Kahl <chad.m.kahl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^22.0.0"
geopandas = "^1.1.1"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
isort = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=gnisdata --cov-report=term-missing"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
